Adds synthwave theme

--- a/chrome-extension/themes/themes/synthwave.scss
+++ b/chrome-extension/themes/themes/synthwave.scss
@@ -47,6 +47,7 @@ $theme-background-toolbar: invert-back-color(#241B2F);
 //----------------------------------------------------------------------------------------------------------------------------------------------------
 
 // Global color
+$gray: #9F9B8B;
 $light-gray: #9F9B8B;
 
 // Text color
