--- a/chrome-extension/style/settings.scss
+++ b/chrome-extension/style/settings.scss
@@ -432,7 +432,7 @@ ul li.drk_button_li,
 		display: none !important;
 	}
 	
-	&.synthwave80s {
+	&.synthwave {
 		background: #262335 !important;
 		color: rgb(255, 255, 255) !important;
 
