--- a/chrome-extension/themes/messenger-synthwave.scss
+++ b/chrome-extension/themes/messenger-synthwave.scss
@@ -1,3 +1,3 @@
-@import "themes/synthwave80s.scss";
+@import "themes/synthwave.scss";
 @import "websites/all-websites.scss";
 @import "websites/messenger.scss";
